--- a/signup.html
+++ b/signup.html
@@ -9,8 +9,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Signup</title>
+<style>
+    body {
+        background-image: url('./assets/images/Login/night-in-las-vegas-bellagio-luxury-hotel-casino-hd-wallpapers-for-mobile-phones-laptops-and-pc-1920×1080-wallpaper-preview.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    
+</style>
 </head>
-<body style="background-image: url('./assets/images/Login/night-in-las-vegas-bellagio-luxury-hotel-casino-hd-wallpapers-for-mobile-phones-laptops-and-pc-1920×1080-wallpaper-preview.jpg');">
+<body >
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
@@ -43,7 +52,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 mx-auto my-auto text-light" style="background-image: linear-gradient(to right,rgba(75, 75, 187, 0.5),rgba(90, 75, 90, 0.5));">
+            <div class="col-sm-6 mx-auto my-5 text-light" style="background-image: linear-gradient(to right,rgba(75, 75, 187, 0.5),rgba(90, 75, 90, 0.5));">
                 <form action="./handler.php" method="post">
                     <label for="fname">FirstName:</label>
                     <input type="text" name="fname" id="fname" class="form-control">
