created index and session

--- a/signup.html
+++ b/signup.html
@@ -54,15 +54,20 @@
         <div class="row">
             <div class="col-sm-6 mx-auto my-5 text-light" style="background-image: linear-gradient(to right,rgba(75, 75, 187, 0.5),rgba(90, 75, 90, 0.5));">
                 <form action="./handler.php" method="post">
-                    <label for="fname">FirstName:</label>
-                    <input type="text" name="fname" id="fname" class="form-control">
-                    <label for="lname">LastName:</label>
-                    <input type="text" name="lname" id="lname" class="form-control">
-                    <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" class="form-control">
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" id="password" class="form-control">
-                    <input type="submit" value="Signup" name="signup" class="btn btn-primary btn-block my-2">
+                    <fieldset>
+                        <legend style="text-align: center;"> <i class="fa fa-user-plus" aria-hidden="true"></i> account creation</legend>
+                        <label for="fname"><i class="fa fa-user" aria-hidden="true"></i> FirstName:</label>
+                        <input type="text" name="fname" id="fname" class="form-control">
+                        <label for="lname"><i class="fa fa-user" aria-hidden="true"></i> LastName:</label>
+                        <input type="text" name="lname" id="lname" class="form-control">
+                        <label for="email"><i class="fas fa-mail-bulk    "></i> Email:</label>
+                        <input type="text" name="email" id="email" class="form-control">
+                        <label for="password"><i class="fa fa-lock" aria-hidden="true"></i> Password:</label>
+                        <input type="password" name="password" id="password" class="form-control">
+                        <input type="submit" value="Signup" name="signup" class="btn btn-primary btn-block my-2">
+                        
+                    </fieldset>
+                    
                 </form>
             </div>
         </div>
