--- a/signup.html
+++ b/signup.html
@@ -26,9 +26,9 @@
                 <nav class="navbar navbar-expand-sm navbar-dark" style="background-image:linear-gradient(to right, blue,purple)">
                     <a class="navbar-brand" href="#"><img class="logo" src="./assets/images/logo/velvet-logo.png" alt=""></a>
                     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                        aria-expanded="false" aria-label="Toggle navigation"></button>
+                        aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></button>
                     <div class="collapse navbar-collapse" id="collapsibleNavId">
-                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <ul class="navbar-nav mr-auto mx-auto my-auto mt-2 mt-lg-0">
                             <li class="nav-item ">
                                 <a class="nav-link" href="./index.php">Home <span class="sr-only">(current)</span></a>
                             </li>
