--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
                         <label for="lname"><i class="fa fa-user" aria-hidden="true"></i> LastName:</label>
                         <input type="text" name="lname" id="lname" class="form-control">
                         <label for="email"><i class="fas fa-mail-bulk    "></i> Email:</label>
-                        <input type="text" name="email" id="email" class="form-control">
+                        <input type="email" name="email" id="email" class="form-control">
                         <label for="password"><i class="fa fa-lock" aria-hidden="true"></i> Password:</label>
                         <input type="password" name="password" id="password" class="form-control">
                         <input type="submit" value="Signup" name="signup" class="btn btn-primary btn-block my-2">
